--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="//code.tidio.co/uu4lfhbnqklgyvygoyagzebtl9jxdfus.js" async></script>
     <script type="module" src="/src/main.jsx"></script>
-   
   </body>
 </html>
